--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
 <script>
 $.extend(spring.config, {
   // my blog title
-  title: 'Spring',
+  title: '学前班',
   // my blog description
-  desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/zhaoda/spring)",
+  desc: "学前端的班",
   // my github username
-  owner: 'zhaoda',
+  owner: 'f2e-journey',
   // creator's username
-  creator: 'zhaoda',
+  creator: '',
   // the repository name on github for writting issues
-  repo: 'spring',
+  repo: 'xueqianban',
   // custom page
   pages: [
-    {name: 'About Spring', number: 1},
-    {name: 'Quick Start', number: 2}
+    // {name: 'About Spring', number: 1}
   ]
 })
 </script>
