--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="x5-orientation" content="portrait" />
 <meta name="x5-fullscreen" content="true" />
 <meta name="x5-page-mode" content="app" />
-<title>学前班 - 学前端的班</title>
+<title>学前班 - 学前端</title>
 <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-114x114.png" />
@@ -24,7 +24,7 @@ $.extend(spring.config, {
   // my blog title
   title: '学前班',
   // my blog description
-  desc: "学前端的班",
+  desc: "学前端",
   // my github username
   owner: 'f2e-journey',
   // creator's username
@@ -39,13 +39,13 @@ $.extend(spring.config, {
 </script>
 <!-- analysis begin // please delete it -->
 <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?a9787f0ab45d5e237bab522431d0a7ec";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
+// var _hmt = _hmt || [];
+// (function() {
+//   var hm = document.createElement("script");
+//   hm.src = "//hm.baidu.com/hm.js?a9787f0ab45d5e237bab522431d0a7ec";
+//   var s = document.getElementsByTagName("script")[0]; 
+//   s.parentNode.insertBefore(hm, s);
+// })();
 </script>
 <!-- analysis end -->
 </head>
