添加 medium-zoom 用于查看图片

--- a/dev.html
+++ b/dev.html
@@ -26,6 +26,7 @@
 <script src="js/lib/template.js"></script>
 <script src="js/lib/marked.js"></script>
 <script src="js/lib/highlight.js"></script>
+<script src="js/lib/medium-zoom.js"></script>
 <script src="js/boot.js"></script>
 <script src="js/pull2refresh.js"></script>
 <script src="js/issuelist.js"></script>
@@ -37,19 +38,18 @@
 <script>
 $.extend(spring.config, {
   // my blog title
-  title: 'Spring',
+  title: '学前班',
   // my blog description
-  desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/zhaoda/spring)",
+  desc: "学前端",
   // my github username
-  owner: 'zhaoda',
+  owner: 'f2e-journey',
   // creator's username
-  creator: 'zhaoda',
+  creator: '',
   // the repository name on github for writting issues
-  repo: 'spring',
+  repo: 'xueqianban',
   // custom page
   pages: [
-    {name: 'About Spring', number: 1},
-    {name: 'Quick Start', number: 2}
+    // {name: 'About Spring', number: 1}
   ]
 })
 </script>
