--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="apple-touch-startup-image" href="img/apple-touch-startup-image-640x920.png" media="(-webkit-min-device-pixel-ratio: 2)">
 <link rel="apple-touch-startup-image" href="img/apple-touch-startup-image-640x1096.png" media="(device-height: 568px)">
 <link rel="stylesheet" href="dist/main.min.css" />
-<script src="dist/main.min.js"></script>
+<script src="dist/main.min.js?v20170309"></script>
 <script>
 $.extend(spring.config, {
   // my blog title
